# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint-and-test.yaml  pyci.yaml
gendiff/: __init__.py  build_ast.py  gendiff.py  statuses.py
gendiff/format/: default.py  json.py  plain.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_gendiff_json.py  test_gendiff_plain.py  test_gendiff_stylish.py
tests/fixtures/: expected_json.txt
